--- a/page3.html
+++ b/page3.html
@@ -8,10 +8,7 @@
 		<style type="text/css">
 			body {
 				background-image: url("Welcome to Philippines' banner 4-1.webp");
-				background-repeat: no-repeat;
-				background-position: center;
-				background-attachment: fixed;
-				background-size: cover;
+				background-size: 100% 100%;
 			}
 			#theme {
 				letter-spacing: 15px;
