--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<input type="password" class="form-control" id="pass">
 				</div>
 				<div>
-					<button type="submit">Submit</button>
+					<button type="submit">Log In</button>
 				</div>
 			</form>
 
