--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 				if (user === "subs" && pass === "3210") {
 					window.location.replace("main page.html");
+				alert("Redirecting you to your portfolio....")
 				} else{
 					alert("It seems there's a problem. Please enter the correct data.");
 					return;
